// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiHeaderLinks gutterSize l is rendered 1`] = `
<nav
  aria-label="App menu"
  class="ouiHeaderLinks"
>
  <div
    class="ouiHeaderLinks__list ouiHeaderLinks__list--gutterL"
  />
</nav>
`;

exports[`OuiHeaderLinks gutterSize m is rendered 1`] = `
<nav
  aria-label="App menu"
  class="ouiHeaderLinks"
>
  <div
    class="ouiHeaderLinks__list ouiHeaderLinks__list--gutterM"
  />
</nav>
`;

exports[`OuiHeaderLinks gutterSize s is rendered 1`] = `
<nav
  aria-label="App menu"
  class="ouiHeaderLinks"
>
  <div
    class="ouiHeaderLinks__list ouiHeaderLinks__list--gutterS"
  />
</nav>
`;

exports[`OuiHeaderLinks gutterSize xs is rendered 1`] = `
<nav
  aria-label="App menu"
  class="ouiHeaderLinks"
>
  <div
    class="ouiHeaderLinks__list ouiHeaderLinks__list--gutterXS"
  />
</nav>
`;

exports[`OuiHeaderLinks is rendered 1`] = `
<nav
  aria-label="aria-label"
  class="ouiHeaderLinks testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiHeaderLinks__list ouiHeaderLinks__list--gutterS"
  />
</nav>
`;

exports[`OuiHeaderLinks popover props is never rendered with "none" 1`] = `
<nav
  aria-label="App menu"
  class="ouiHeaderLinks"
>
  <div
    class="ouiHeaderLinks__list ouiHeaderLinks__list--gutterS"
  />
</nav>
`;

exports[`OuiHeaderLinks popover props is rendered 1`] = `
<nav
  aria-label="App menu"
  class="ouiHeaderLinks"
>
  <div
    class="ouiPopover ouiPopover--anchorDownRight"
  >
    <div
      class="ouiPopover__anchor customAnchorClass"
    >
      <button
        aria-label="Open menu"
        class="ouiButtonEmpty ouiButtonEmpty--text ouiHeaderSectionItemButton customButtonClass"
        type="button"
      >
        <span
          class="ouiButtonContent ouiButtonEmpty__content"
        >
          <span
            class="ouiButtonEmpty__text"
          >
            <span
              class="ouiHeaderSectionItemButton__content"
            >
              <span
                data-ouiicon-type="bolt"
              />
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</nav>
`;
